--- a/dnsmasq/Dockerfile
+++ b/dnsmasq/Dockerfile
@@ -1,6 +1,6 @@
 ﻿FROM leijiangping/jdk
 MAINTAINER leijiangping <leijiang21@126.com>
 RUN apt-get update 
-RUN apk --no-cache add dnsmasq
+RUN apt-get install  dnsmasq
 EXPOSE 53 53/udp
 ENTRYPOINT ["dnsmasq", "-k"]
