--- a/dnsmasq/Dockerfile
+++ b/dnsmasq/Dockerfile
@@ -1,6 +1,6 @@
 ﻿FROM leijiangping/jdk
 MAINTAINER leijiangping <leijiang21@126.com>
 RUN apt-get update 
-RUN apt-get install  dnsmasq
+RUN apt-get install  dnsmasq  -y   \
 EXPOSE 53 53/udp
 ENTRYPOINT ["dnsmasq", "-k"]
