--- a/zookeeper/Dockerfile
+++ b/zookeeper/Dockerfile
@@ -6,8 +6,7 @@ ARG VERSION=3.4.10
 
 LABEL name="zookeeper" version=$VERSION
 
-RUN apk add --no-cache wget bash \
-    && mkdir -p /opt/zookeeper \
+RUN mkdir -p /opt/zookeeper \
     && wget -q -O - $MIRROR/zookeeper/zookeeper-$VERSION/zookeeper-$VERSION.tar.gz \
       | tar -xzC /opt/zookeeper --strip-components=1 \
     && cp /opt/zookeeper/conf/zoo_sample.cfg /opt/zookeeper/conf/zoo.cfg \
