--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -1,4 +1,4 @@
-﻿FROM leijiangping/ubuntu:16.04
+﻿FROM ubuntu:16.04
 MAINTAINER leijiangping <leijiang21@126.com>
 RUN apt-get update &&apt-get install wget -y  && apt-get install git -y
 RUN apt-get install inetutils-ping  -y 
