--- a/hbase/Dockerfile
+++ b/hbase/Dockerfile
@@ -15,7 +15,7 @@ RUN mkdir -p /opt/hbase
 
 RUN apt-get install  curl   -y
 
-RUN curl -fSL "HBASE_URL" -o /tmp/hbase.tar.gz \
+RUN curl -fSL $HBASE_URL -o /tmp/hbase.tar.gz \
     && tar -xvf /tmp/hbase.tar.gz -C /opt \
     && mv /opt/hbase-$HBASE_VERSION-* $HBASE_HOME \
     && rm -f /tmp/hbase.tar.gz
