--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update
 ENV CATALINA_HOME /usr/local/tomcat8
 ENV PATH $CATALINA_HOME/bin:$PATH
 RUN mkdir /usr/local/tomcat8 && \
-    wget -qO- "http://mirrors.hust.edu.cn/apache/tomcat/tomcat-8/v8.5.28/bin/apache-tomcat-8.5.28.tar.gz" | tar -zx --strip-components=1 -C /usr/local/tomcat8
+    wget -qO- "https://archive.apache.org/dist/tomcat/tomcat-8/v8.5.5/bin/apache-tomcat-8.5.5.tar.gz" | tar -zx --strip-components=1 -C /usr/local/tomcat8
 
 ENV M2_HOME /usr/local/maven3   
 ENV PATH $M2_HOME/bin:$PATH
