--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -10,7 +10,7 @@ RUN mkdir /usr/local/tomcat8 && \
 ENV M2_HOME /usr/local/maven3   
 ENV PATH $M2_HOME/bin:$PATH
 RUN mkdir -p /usr/local/maven3 && \
-    wget -qO- "http://mirrors.hust.edu.cn/apache/maven/maven-3/3.5.2/binaries/apache-maven-3.5.2-bin.tar.gz" | tar -zx --strip-components=1 -C /usr/local/maven3
+    wget -qO- "https://archive.apache.org/dist/maven/maven-3/3.6.0/binaries/apache-maven-3.6.0-bin.tar.gz" | tar -zx --strip-components=1 -C /usr/local/maven3
 
 EXPOSE 8080
 CMD ["catalina.sh", "run"]
