--- a/jar-executer/Dockerfile
+++ b/jar-executer/Dockerfile
@@ -5,6 +5,8 @@ RUN apt-get update
 # Add scripts
 ADD scripts /scripts
 RUN chmod +x /scripts/*.sh
+RUN mkdir /apps
+RUN mkdir /apps/jars
 RUN chmod +x /apps/jars/*.jar
 # Expose listen port
 EXPOSE 8080  8070
