--- a/jar-executer/Dockerfile
+++ b/jar-executer/Dockerfile
@@ -2,6 +2,10 @@
 MAINTAINER leijiangping <leijiang21@126.com>
 RUN apt-get update 
 
+#
+ENV APPEND_JAVA_OPTS=""
+ENV Default_JAVA_OPTS=" -Xms512m -Xmx512m -Dfile.encoding=utf-8"
+ENV JAVA_OPTS=$Default_JAVA_OPTS:$APPEND_JAVA_OPTS;
 # Add scripts
 ADD scripts /scripts
 RUN chmod +x /scripts/*.sh
