--- a/jar-executer/Dockerfile
+++ b/jar-executer/Dockerfile
@@ -3,6 +3,7 @@ MAINTAINER leijiangping <leijiang21@126.com>
 RUN apt-get update 
 
 #
+ENV ServerPort=8070
 ENV APPEND_JAVA_OPTS=""
 ENV Default_JAVA_OPTS=" -Xms512m -Xmx512m -Dfile.encoding=utf-8"
 ENV JAVA_OPTS=$Default_JAVA_OPTS:$APPEND_JAVA_OPTS;
@@ -13,7 +14,7 @@ RUN mkdir /apps
 RUN mkdir /apps/jars
 RUN chmod -R +x /apps/jars
 # Expose listen port
-EXPOSE 8080  8070
+EXPOSE 8080  $ServerPort
 
 # Expose our volumes
 VOLUME ["/apps/jars","/apps/logs"]
